[package]
name = "rflush"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cron = "0.15"
futures = "0.3"
mime_guess = "2"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "multipart", "rustls-tls", "zstd"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rust-embed = "8"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
urlencoding = "2"
